# imgresize

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
src/: lib.rs  main.rs  resize.rs  window.fl
