[package]
name = "imgsize"
version = "0.3.1"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
fast_image_resize = {version = "4.0.0", features = ["image"]}
glob = "0.3.1"
iced = {version = "0.12.1", features = ["smol"]}
image = "0.25.1"
native-dialog = "0.7.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
